--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,9 @@
   <b>Username</b>
   <%= h @user.username %>
 </p>
+<% @user.meal_plans.each do |p| %>
+<p><b><%= h p.id %></b></p>
+<% end  %>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
