--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,4 +12,4 @@
 
 <%= link_to 'Show', @user %>
 <%= link_to 'Back', users_path %>
-<%= link_to 'Manage meal plans', users_meal_plans_path %>
+<%= link_to 'Manage meal plans', users_meal_plans_path(:user_id => @user.id) %>
